[package]
name = "polkadot-voter-bags"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }

generate-bags = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "tsv-unknown-block" }

westend-runtime = { path = "../../runtime/westend" }
kusama-runtime = { path = "../../runtime/kusama" }
polkadot-runtime = { path = "../../runtime/polkadot" }
